--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/Extractoro/requiem-discord-bot#readme",
   "dependencies": {
     "@discordjs/rest": "^1.3.0",
-    "discord.js": "^14.6.0"
+    "discord.js": "^14.6.0",
+    "mongoose": "^6.6.5"
   },
   "type": "module",
   "devDependencies": {
