--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Extractoro/requiem-discord-bot#readme",
   "dependencies": {
+    "@discordjs/builders": "^1.3.0",
     "@discordjs/rest": "^1.3.0",
     "discord.js": "^14.6.0",
     "mongoose": "^6.6.5"
